--- a/_posts/2016-12-30-33c3.md
+++ b/_posts/2016-12-30-33c3.md
@@ -14,7 +14,7 @@ Although most of the talk focuses on Superhuman Sports,
 I go also into some details about enabeling technologies, mentioning smart eyewear
 and also the Presto project.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/aEFaInB0Dp4" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8DUkpUrFwMA" frameborder="0" allowfullscreen></iframe>
 
 Here's the abstract of the talk:
 
